--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,29 @@ input {
   font-size: 1rem;
   padding: .4rem;
 }
+
+.card-grid {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card {
+  align-content: center;
+  border-radius: 6px;
+  margin: 0 10px 10px 0;
+  overflow: hidden;
+  -webkit-box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.2);
+}
+
+/* width: 200px; */
+.card img {
+  max-width: 200px;
+  width: 100%;
+}
+
+.card p {
+  padding: .5rem;
+  text-align: center;
+  margin: 0 auto;
+}
